--- a/Clash_TW.yaml
+++ b/Clash_TW.yaml
@@ -4,6 +4,8 @@
   - DOMAIN-KEYWORD,pchome.com.tw,🔰 選取節點
   - DOMAIN-SUFFIX,www.nextbank.com.tw,🔰 選取節點
   - DOMAIN-SUFFIX,ptt.cc,🔰 選取節點
+  - DOMAIN-SUFFIX,niotv.com,🔰 選取節點
+  - DOMAIN-SUFFIX,getupnote.com,🔰 選取節點
   - DOMAIN-SUFFIX,eltaott.tv,🇹🇼 台灣串流
   - DOMAIN-SUFFIX,dcard.tw,🇹🇼 台灣串流
   - DOMAIN-SUFFIX,www.8591.com.tw,🇹🇼 台灣串流
