--- a/Clash_TW.yaml
+++ b/Clash_TW.yaml
@@ -6,6 +6,9 @@
   - DOMAIN-SUFFIX,ptt.cc,🔰 選取節點
   - DOMAIN-SUFFIX,niotv.com,🔰 選取節點
   - DOMAIN-SUFFIX,getupnote.com,🔰 選取節點
+  - DOMAIN-SUFFIX,discordapp.net,🔰 選取節點
+  - DOMAIN-SUFFIX,discord.com,🔰 選取節點
+  - DOMAIN-SUFFIX,discord.gg,🔰 選取節點
   - DOMAIN-SUFFIX,eltaott.tv,🇹🇼 台灣串流
   - DOMAIN-SUFFIX,dcard.tw,🇹🇼 台灣串流
   - DOMAIN-SUFFIX,www.8591.com.tw,🇹🇼 台灣串流
