--- a/Clash_TW.yaml
+++ b/Clash_TW.yaml
@@ -13,6 +13,12 @@
   - DOMAIN-SUFFIX,missav.com,🔰 選取節點
   - DOMAIN-SUFFIX,www.tradingview.com,🔰 選取節點
   - DOMAIN-SUFFIX,www.pionex.com,🔰 選取節點
+  - DOMAIN-SUFFIX,cdn.linktofish.com,🔰 選取節點
+  - DOMAIN-SUFFIX,portal.linktofish.com,🔰 選取節點
+  - DOMAIN-SUFFIX,web.linktofish.shop,🔰 選取節點
+  - DOMAIN-SUFFIX,linktofish.b-cdn.net,🔰 選取節點
+  - DOMAIN-SUFFIX,node.jssub.site,🔰 選取節點
+  - DOMAIN-SUFFIX,rapps.fun,🔰 選取節點
   - DOMAIN-SUFFIX,eltaott.tv,🇹🇼 台灣串流
   - DOMAIN-SUFFIX,dcard.tw,🇹🇼 台灣串流
   - DOMAIN-SUFFIX,www.8591.com.tw,🇹🇼 台灣串流
