--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -13,16 +13,11 @@
   - DOMAIN-SUFFIX,missav.com,🔰 境外流量
   - DOMAIN-SUFFIX,www.tradingview.com,🔰 境外流量
   - DOMAIN-SUFFIX,www.pionex.com,🔰 境外流量
-  - DOMAIN-SUFFIX,cdn.linktofish.com,🔰 境外流量
-  - DOMAIN-SUFFIX,portal.linktofish.com,🔰 境外流量
-  - DOMAIN-SUFFIX,web.linktofish.shop,🔰 境外流量
-  - DOMAIN-SUFFIX,linktofish.b-cdn.net,🔰 境外流量
-  - DOMAIN-SUFFIX,node.jssub.site,🔰 境外流量
-  - DOMAIN-SUFFIX,rapps.fun,🔰 境外流量
   - DOMAIN-SUFFIX,eltaott.tv,🔰 境外流量
   - DOMAIN-SUFFIX,dcard.tw,🔰 境外流量
   - DOMAIN-SUFFIX,www.8591.com.tw,🔰 境外流量
   - DOMAIN-SUFFIX,maicoin.com,🔰 境外流量
+  - DOMAIN-SUFFIX,wsschatpush.miguvideo.com,DIRECT
   - DOMAIN-KEYWORD,-cn,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,🔰 境外流量
