--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -85,6 +85,13 @@
   # Customized
 
   - DOMAIN-SUFFIX,miguvideo.com,DIRECT
+  - PROCESS-NAME,YuanShen.exe,DIRECT
+  - PROCESS-NAME,EpicWebHelper.exe,DIRECT
+  - DOMAIN-SUFFIX,steamcontent.com,DIRECT
+  - DOMAIN-SUFFIX,steamstatic.com,DIRECT
+  - DOMAIN-SUFFIX,steamserver.net,DIRECT
+  - DOMAIN-SUFFIX,rmbgame.net,DIRECT
+  - DOMAIN-SUFFIX,steampowered.com,🔰 境外流量
   - DOMAIN-KEYWORD,surveycake.com,🔰 境外流量
   - DOMAIN-KEYWORD,pchome.com.tw,🔰 境外流量
   - DOMAIN-SUFFIX,www.nextbank.com.tw,🔰 境外流量
