修复官网开代理反而无法访问的问题
因为海外 CNAME 指向的 Bunny CDN 域名被墙了，开代理时应用了分流规则，而在分流规则中给这些域名都指定了 DIRECT

--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -131,6 +131,10 @@
   - DOMAIN-SUFFIX,sublink.rapps.click,DIRECT
   - DOMAIN-SUFFIX,getrapps.com,DIRECT
   - DOMAIN-SUFFIX,get.rapps.online,DIRECT
+  - DOMAIN-SUFFIX,travelercn.b-cdn.net,🔰 境外流量
+  - DOMAIN-SUFFIX,traveler2.b-cdn.net,🔰 境外流量
+  - DOMAIN-SUFFIX,traveleross.b-cdn.net,🔰 境外流量
+  - DOMAIN-SUFFIX,travelertw.b-cdn.net,🔰 境外流量
   
   # Final
   
