--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -121,7 +121,12 @@
   - DOMAIN-SUFFIX,ebc.net.tw,🔰 境外流量
   - DOMAIN-SUFFIX,tstartel.com,🔰 境外流量
   - DOMAIN-SUFFIX,managertoday.com.tw,🔰 境外流量
+
+  # Google Play
+
   - DOMAIN-SUFFIX,services.googleapis.cn,🔰 境外流量
+  - DOMAIN-SUFFIX,xn--ngstr-lra8j.com,DIRECT
+  - DOMAIN-KEYWORD,google,🔰 境外流量
   
   # Traveler
   - DOMAIN-SUFFIX,travelercn.b-cdn.net,🔰 境外流量
@@ -134,6 +139,4 @@
   - DOMAIN-SUFFIX,cn,DIRECT
   - DOMAIN-KEYWORD,-cn,DIRECT
   - GEOIP,CN,DIRECT
-  - DOMAIN-SUFFIX,xn--ngstr-lra8j.com,DIRECT
-  - DOMAIN-KEYWORD,google,🔰 境外流量
   - MATCH,🔰 境外流量
