Update Ezway Rules

--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -122,6 +122,8 @@
   - DOMAIN-SUFFIX,tstartel.com,🔰 境外流量
   - DOMAIN-SUFFIX,managertoday.com.tw,🔰 境外流量
   - DOMAIN-SUFFIX,www.mobile01.com,🔰 境外流量
+  - DOMAIN-SUFFIX,eccs.tradevan.com.tw,🔰 境外流量
+  - DOMAIN-SUFFIX,peccs.egress.tcs.tradevan.net,🔰 境外流量
 
   # Google Play
 
