--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -124,6 +124,7 @@
   - DOMAIN-SUFFIX,www.mobile01.com,🔰 境外流量
   - DOMAIN-SUFFIX,eccs.tradevan.com.tw,🔰 境外流量
   - DOMAIN-SUFFIX,peccs.egress.tcs.tradevan.net,🔰 境外流量
+  - DOMAIN-SUFFIX,copilot.microsoft.com,🔰 境外流量
 
   # Google Play
 
