Update Stripe Rules

--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -125,6 +125,7 @@
   - DOMAIN-SUFFIX,eccs.tradevan.com.tw,🔰 境外流量
   - DOMAIN-SUFFIX,peccs.egress.tcs.tradevan.net,🔰 境外流量
   - DOMAIN-SUFFIX,copilot.microsoft.com,🔰 境外流量
+  - DOMAIN-SUFFIX,js.stripe.com,🔰 境外流量
 
   # Google Play
 
