--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -106,6 +106,8 @@
   - DOMAIN-SUFFIX,discord.gg,🔰 境外流量
   - DOMAIN-SUFFIX,chatgpt.com,🔰 境外流量
   - DOMAIN-SUFFIX,missav.com,🔰 境外流量
+  - DOMAIN-SUFFIX,missav.ws,🔰 境外流量
+  - DOMAIN-SUFFIX,missav.ai,🔰 境外流量
   - DOMAIN-SUFFIX,www.tradingview.com,🔰 境外流量
   - DOMAIN-SUFFIX,www.pionex.com,🔰 境外流量
   - DOMAIN-SUFFIX,eltaott.tv,🔰 境外流量
