--- a/Xboard/Clash_TW.yaml
+++ b/Xboard/Clash_TW.yaml
@@ -138,12 +138,17 @@
   
   # Traveler
   
-  - DOMAIN-SUFFIX,travelercn.b-cdn.net,🔰 境外流量
-  - DOMAIN-SUFFIX,traveler2.b-cdn.net,🔰 境外流量
-  - DOMAIN-SUFFIX,traveleross.b-cdn.net,🔰 境外流量
-  - DOMAIN-SUFFIX,travelertw.b-cdn.net,🔰 境外流量
+  - DOMAIN-SUFFIX,panel.rapps.online,🔰 境外流量
+  - DOMAIN-SUFFIX,traveler.rapps.download,🔰 境外流量
+  - DOMAIN-SUFFIX,traveler2.rapps.download,🔰 境外流量
+  - DOMAIN-SUFFIX,kr04tt.rapps.download,🔰 境外流量
+  - DOMAIN-SUFFIX,nyanpass.blackpink520.cyou,🔰 境外流量
+  - DOMAIN-SUFFIX,defuzhuanfa.com,🔰 境外流量
+  - DOMAIN-SUFFIX,www.dfzhuanfa.com,🔰 境外流量
   - DOMAIN-SUFFIX,pototapay.com,🔰 境外流量
   - DOMAIN-SUFFIX,api.xinanpay.com,🔰 境外流量
+  - DOMAIN-KEYWORD,safepal,🔰 境外流量
+  - DOMAIN-KEYWORD,trustwallet,🔰 境外流量
 
   # REJECT UDP 53
   - IP-CIDR,8.8.8.8/32,🔰 境外流量
